# Knowledge-Rag

./: .env.example  .gitignore  AUTHENTICATION.md  DEPLOYMENT.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  start.sh  start_app.py  test_auth.py
backend/: __init__.py
backend/api/: __init__.py  middleware.py  routes.py
backend/api/auth/: routes.py
backend/core/: __init__.py  config.py  models.py
backend/database/: db.py
backend/services/: __init__.py  agent.py  auth_service.py  document.py  vector_store.py
frontend/: ARCHITECTURE.md  ENHANCEMENTS.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: Header.tsx
frontend/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx
frontend/components/upload/: FileUpload.tsx  URLUpload.tsx  UploadPanel.tsx
frontend/components/workflow/: WorkflowVisualization.tsx
frontend/lib/contexts/: AuthContext.tsx
frontend/lib/hooks/: index.ts  useChat.ts  useKnowledgeBase.ts
frontend/lib/types/: index.ts
